fix: fixing page break at 550px or lower widths.

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,13 @@
   }
 }
 
+@media screen and (width < 410px){
+  :root {
+    font-size: 10px;
+  }
+}
+
+
 @font-face {
   font-family: inter;
   src: url("./assets/fonts/Inter/Inter-VariableFont_opsz,wght.ttf") format("ttf");
